요리재료선택 html 수정

--- a/public/ingredient.html
+++ b/public/ingredient.html
@@ -20,6 +20,14 @@
     <div class="container">
       <header>요리 재료 선택</header>
       <main>
+        <div class="banner">
+          <div>
+            <h2>이재료로모해먹지 어플 소개</h2>
+            <p>
+              '이모'는 재료를 통해 요리 레시피를 검색할 수 있는 어플입니다.
+            </p>
+          </div>
+        </div>
         <ul class="ingredientes">
           <li>
             <h3 class="category gogi">육류<i class="fa fa-chevron-down"></i></h3>
