디자인 수정

--- a/public/ingredient.html
+++ b/public/ingredient.html
@@ -135,11 +135,13 @@
         </ul>
 
         <div class="container-wrap">
-          <div class="cookEnter">요리보기</div>
-          <div class="refresh"><i class="fas fa-redo"></i></div>
-          <ul class="ingre-item-container">
-            <!-- <li class="ingre-item"><span>12313213</span><button class="remove-ingre-item">X</button></li> -->
-          </ul>
+          <div class="container-inner">
+            <div class="cookEnter">요리보기</div>
+            <div class="refresh"><i class="fas fa-redo"></i></div>
+            <ul class="ingre-item-container">
+              <!-- <li class="ingre-item"><span>12313213</span><button class="remove-ingre-item">X</button></li> -->
+            </ul>
+          </div>
         </div>
       </main>
       <nav>
